# VVS_platform

./: .dockerignore  .gitattributes  .gitignore  README.md  tmp.py
project_root/dagster/vvs_dagster/: README.md  pyproject.toml  setup.cfg  setup.py
project_root/dagster/vvs_dagster/vvs_dagster/: assets.py  definitions.py  dynamic_job.py  failure_sensor.py  hc_job.py  qdrant_upload_job.py  resources.py  test_job.py  utils.py
project_root/database/: pyproject.toml  requirements.txt  setup.py
project_root/database/tests/: conftest.py  pytest.ini  run.py
project_root/database/tests/assembly_crud/: test_assembly_checkin.py  test_assembly_crud.py
project_root/database/tests/cleanup/: test_cleanup_workflow.py
project_root/database/tests/hc_crud/: conftest.py  test_db_edge.py  test_db_ops.py  test_execution_log_accounting.py  test_job_crud.py  test_job_input_overrides.py  test_upsert_crud.py
project_root/database/tests/item_crud/: test_item_checkin.py  test_item_crud.py  test_item_result_crud.py  test_item_score_crud.py  test_item_source_crud.py
project_root/database/tests/job_crud/: test_job_crud.py  test_job_plugin_crud.py
project_root/database/tests/plugin_crud/: test_embedding_relationships.py  test_plugin_create.py  test_plugin_delete.py  test_plugin_execution_failure.py  test_plugin_get.py  test_plugin_summary.py  test_plugin_update.py
project_root/database/vvs_database/: __init__.py  core.py  exceptions.py  gradients.py  logging.py  settings.py  testing.py  utils.py
project_root/database/vvs_database/crud/: __init__.py  assembly_crud.py  hc_crud.py  (+5 more)
(+368 files in other folders)
