[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vvs-database"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "pydantic",
    "pydantic-settings",
    "sqlalchemy[asyncio]",
    "asyncpg",
    "psycopg2-binary",
    "httpx",
    "aioredis",
    "pika"
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
]

[project.scripts]
run-vvs-db-tests = "tests.run:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"