[project]
name = "vvs_dagster"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "dagster",
    "dagster-postgres",
    "dagster-docker",
    "dagster-cloud",
    "dagster-aws",
    "pandas",
    "qdrant-client==1.11.2",
]

[project.optional-dependencies]
dev = [
    "dagster-webserver", 
    "pytest",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "vvs_dagster.definitions"
code_location_name = "vvs_dagster"

[tool.setuptools.packages.find]
exclude=["vvs_dagster_tests"]
